cmp - dont force Ninja generator

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cmake-build-extension
+name = amoeba-build
 description = Setuptools extension to build and package CMake projects.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -8,12 +8,12 @@ author_email = dgferigo@gmail.com
 license = MIT
 license_file = LICENSE
 platforms = any
-url = https://github.com/diegoferigo/cmake-build-extension
+url = https://github.com/diegoferigo/amoeba-build
 
 project_urls =
-    Changelog = https://github.com/diegoferigo/cmake-build-extension/releases
-    Source = https://github.com/diegoferigo/cmake-build-extension
-    Tracker = https://github.com/diegoferigo/cmake-build-extension/issues
+    Changelog = https://github.com/diegoferigo/amoeba-build/releases
+    Source = https://github.com/diegoferigo/amoeba-build
+    Tracker = https://github.com/diegoferigo/amoeba-build/issues
 
 keywords =
     setuptools
@@ -47,8 +47,8 @@ package_dir =
     =src
 python_requires = >=3.6
 install_requires =
-    cmake
-    ninja
+    # cmake
+    # ninja
     GitPython
     setuptools_scm
 
